# edit-clipboard

./: Cargo.toml  README.md  example_config.toml  test.nu
src/: args.rs  config.rs  main.rs
src/Preprocesser/: mod.rs
src/preprocesser/: mod.rs  processor.rs  transform.rs
