[package]
name = "edit_clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive"]}
clipboard = "0.5.0"
inquire = "0.5.3"
serde = {version = "1.0.183", features = ["derive"]}
simple-home-dir = {version = "0.1.4", features = ["expand_tilde"]}
temp-file = "0.1.7"
tempfile = "3.4.0"
toml = "0.7.6"
uniaxe = "0.1.1"
